--- a/travel_app/templates/home.html
+++ b/travel_app/templates/home.html
@@ -7,7 +7,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">welcome</div>
                 <div class="intro-heading">create your destination list</div>
-                <a href="#services" class="page-scroll btn btn-xl">start your lists</a>
+                <a href="{% url 'register' %}" class="page-scroll btn btn-xl">start your lists</a>
 
             </div>
         </div>
