--- a/travel_app/static/css/style.css
+++ b/travel_app/static/css/style.css
@@ -652,10 +652,11 @@ aside.clients img {
 }
 
 section#register {
-    background-color: #222;
-    background-image: url(../../../../../Downloads/agency/img/map-image.png);
-    background-position: center;
-    background-repeat: no-repeat;
+    padding-top: 0px;
+    /*background-color: #222;*/
+    /*background-image: url(../../../../../Downloads/agency/img/map-image.png);*/
+    /*background-position: center;*/
+    /*background-repeat: no-repeat;*/
 }
 
 section#register .section-heading {
@@ -888,4 +889,16 @@ ul {
     margin-left: -5px;
     list-style: none;
     color: #fff;
+}
+
+    .leaflet-container {  /* all maps */
+        width:  100%;
+        height: 100%;
+    }
+
+    #specialbigmap {
+        height: 800px;
+    }
+section#register{
+    padding-top: -30px;
 }
