--- a/travel_app/templates/base_template.html
+++ b/travel_app/templates/base_template.html
@@ -12,10 +12,10 @@
     <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-
+    {% block extra_assets %}{% endblock %}
 </head>
     <body>
-        <nav class="navbar navbar-default navbar-fixed-top">
+        <nav class="navbar navbar-default navbar-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
@@ -36,7 +36,7 @@
                     </li>
                     {% if user.is_authenticated %}
                     <li>
-                        <a class="page-scroll" href="#">my lists</a>
+                        <a class="page-scroll" href="{% url 'list_it' %}">my lists</a>
                     </li>
                     <li>
                             <a class="page-scroll" href="{% url 'profile' %}">profile</a>
