--- a/travel_app/templates/profile.html
+++ b/travel_app/templates/profile.html
@@ -1,7 +1,7 @@
 {% extends 'base_template.html' %}
 
 {% block content %}
- <section id="about">
+ <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -10,8 +10,22 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
-
+                <div class="col-lg-4 box">
+                    <h2>welcome {{ user.username }}!</h2>
+                </div>
+                <div class="col-lg-4 box">
+                <ul>
+                {% for list in lists %}
+                    <li><a href="{% url 'view_list' list.slug_name %}">{{ list.list_name }}</a></li>
+                {% endfor %}
+                </ul>>
+                </div>
+                <div class="col-lg-4 box">
+                <ul>
+                {% for location in locations %}
+                    <li><a href="{% url 'view_location' location.id %}">{{ location.name }}</a></li>
+                {% endfor %}
+                </ul>>
                 </div>
             </div>
         </div>
